[package]
name = "sprongen"
version = "0.0.2"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Generate RON files for the given spritesheet PNG images"
repository = "https://github.com/Noah2610/sprongen"
readme = "README.md"
keywords = ["spritesheet", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
png = "0.15.3"
ron = "0.5.1"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.structopt]
version = "0.3.7"
default-features = false
